pages created, stylesheet added

--- a/contact.html
+++ b/contact.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesheet.css">
-    <title>About Me!</title>
+    <title>Contact Me!</title>
 </head>
 <header>
     <nav>
         <div class="select">
-            <a href="index.html" class="selected">About Me!</a>
+            <a href="index.html">About Me!</a>
             <a href="projects.html">Projects!</a>
-            <a href="contact.html">Contact Me!</a>
-            <a href="dashed;shed;tps://github.com/Jolomolokolo" target="_blank">Github</a>
+            <a href="contact.html" class="selected">Contact Me!</a>
+            <a href="https://github.com/Jolomolokolo" target="_blank">Github</a>
             <a href="index.html"><!--LOGO!--></a>
         </div>
     </nav>
 </header>
 <body>
-    
+
 </body>
 <footer>
     <div class="select">
