--- a/impressum.html
+++ b/impressum.html
@@ -4,26 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesheet.css">
-    <title>About Me!</title>
+    <title>Impressum</title>
 </head>
 <header>
     <nav>
         <div class="select">
-            <a href="index.html" class="selected">About Me!</a>
+            <a href="index.html">About Me!</a>
             <a href="projects.html">Projects!</a>
             <a href="contact.html">Contact Me!</a>
-            <a href="dashed;shed;tps://github.com/Jolomolokolo" target="_blank">Github</a>
+            <a href="https://github.com/Jolomolokolo" target="_blank">Github</a>
             <a href="index.html"><!--LOGO!--></a>
         </div>
     </nav>
 </header>
 <body>
-    
+
 </body>
 <footer>
     <div class="select">
         <p>© 2024 Jolomolokolo</p>
-        <a href="impressum.html">Impressum</a>
+        <a href="impressum.html" class="selected">Impressum</a>
     </div>
 </footer>
 </html>
