started with about me and minor changes

--- a/index.html
+++ b/index.html
@@ -18,7 +18,30 @@
     </nav>
 </header>
 <body>
-    
+    <div class="content">
+        <div class="about">
+            <h1>About Me!</h1>
+            <p>Hey! I'm Jolomolokolo, a 16 year old student from Germany. I'm currently in the 10th grade and I'm learning how to code in my free time. I'm mainly focusing on web development, but I'm also interested in other programming languages. I'm also a big fan of open source software and I'm trying to contribute to some projects. I'm also a big fan of the command line and I'm trying to learn how to use it more efficiently.</p>
+        </div>
+        <div class="skills">
+            <h1>Skills</h1>
+            <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript (learning)</li>
+                <li>Python (learning)</li>
+                <li>Windows</li>
+                <li>Linux (learning)</li>
+                <li>Git</li>
+                <li>Github</li>
+                <li>Command Line</li>
+                <li>Arduino</li>
+                <li>Rasberry Pi</li>
+                <li>Server - Fujitsu</li>
+                <li>Proxmox (learning)c</li>
+                <li>Network</li>
+        </div>
+    </div>
 </body>
 <footer>
     <div class="select">
