Made big improvments with CSS

--- a/index.html
+++ b/index.html
@@ -25,20 +25,20 @@
         </div>
         <div class="skills">
             <h1>Skills</h1>
-            <ul>
+            <ul class="skills">
                 <li>HTML</li>
                 <li>CSS</li>
-                <li>JavaScript (learning)</li>
-                <li>Python (learning)</li>
+                <li class="learning">JavaScript (learning)</li>
+                <li class="learning">Python (learning)</li>
                 <li>Windows</li>
-                <li>Linux (learning)</li>
+                <li class="learning">Linux (learning)</li>
                 <li>Git</li>
                 <li>Github</li>
                 <li>Command Line</li>
                 <li>Arduino</li>
                 <li>Rasberry Pi</li>
                 <li>Server - Fujitsu</li>
-                <li>Proxmox (learning)c</li>
+                <li class="learning">Proxmox (learning)</li>
                 <li>Network</li>
         </div>
     </div>
