Improvments to Textcolor

--- a/contact.html
+++ b/contact.html
@@ -9,10 +9,10 @@
 <header>
     <nav>
         <div class="select">
-            <a href="index.html">About Me!</a>
-            <a href="projects.html">Projects!</a>
+            <a href="index.html" class="text-b">About Me!</a>
+            <a href="projects.html" class="text-b">Projects!</a>
             <a href="contact.html" class="selected">Contact Me!</a>
-            <a href="https://github.com/Jolomolokolo" target="_blank">Github</a>
+            <a href="https://github.com/Jolomolokolo" target="_blank" class="text-b">Github</a>
             <a href="index.html"><!--LOGO!--></a>
         </div>
     </nav>
