--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <nav>
         <div class="select">
             <a href="index.html" class="selected">About Me!</a>
-            <a href="projects.html">Projects!</a>
-            <a href="contact.html">Contact Me!</a>
-            <a href="dashed;shed;tps://github.com/Jolomolokolo" target="_blank">Github</a>
+            <a href="projects.html" class="text-b">Projects!</a>
+            <a href="contact.html" class="text-b">Contact Me!</a>
+            <a href="dashed;shed;tps://github.com/Jolomolokolo" target="_blank" class="text-b">Github</a>
             <a href="index.html"><!--LOGO!--></a>
         </div>
     </nav>
@@ -24,19 +24,19 @@
             <p>Hey! I'm Jolomolokolo, a 16 year old student from Germany. I'm currently in the 10th grade and I'm learning how to code in my free time. I'm mainly focusing on web development, but I'm also interested in other programming languages. I'm also a big fan of open source software and I'm trying to contribute to some projects. I'm also a big fan of the command line and I'm trying to learn how to use it more efficiently.</p>
         </div>
         <div class="skill-grid">
-            <div class="grid-items"><p>Programming Languages</p></div>
-            <div class="grid-items"><p>Applications</p></div>
-            <div class="grid-items"><p>Electronics</p></div>
-            <div class="grid-items"><p>Operating Systems</p></div>
-            <div class="grid-items"><p>Server</p></div>
-            <div class="grid-items"><p>Network</p></div>
-            <div class="grid-items"><p>Other</p></div>
-            <div class="grid-items"><ul><li>HTML</li><li>CSS</li><li class="learning">JavaScript</li><li class="learning">Python</li></ul></div>
-            <div class="grid-items"><ul><li>Git</li><li>Github</li><li>Office</li><li>Command Line</li><li>Davinci Resolve</li></ul></div>
-            <div class="grid-items"><ul><li>Arduino</li><li>Rasberry Pi</li></ul></div>
-            <div class="grid-items"><ul><li>Windows (Primary OS)</li><li class="learning">Linux</li></ul></div>
-            <div class="grid-items"><ul><li>Managment Tools</li><li class="learning">Prometheus/Grafana</li><li class="learning">Proxmox</li></ul></div>
-            <div class="grid-items"><ul><li>FritzBox</li><li>Protocols</li><li>Scheme</li></ul></div>
+            <div class="grid-items"><p class="text-b">Programming Languages</p></div>
+            <div class="grid-items"><p class="text-b">Applications</p></div>
+            <div class="grid-items"><p class="text-b">Electronics</p></div>
+            <div class="grid-items"><p class="text-b">Operating Systems</p></div>
+            <div class="grid-items"><p class="text-b">Server</p></div>
+            <div class="grid-items"><p class="text-b">Network</p></div>
+            <div class="grid-items"><p class="text-b">Other</p></div>
+            <div class="grid-items"><ul><li class="text-b">HTML</li><li class="text-b">CSS</li><li class="learning">JavaScript</li><li class="learning">Python</li></ul></div>
+            <div class="grid-items"><ul><li class="text-b">Git</li><li class="text-b">Github</li><li class="text-b">Office</li><li class="text-b">Command Line</li><li class="text-b">Davinci Resolve</li></ul></div>
+            <div class="grid-items"><ul><li class="text-b">Arduino</li><li class="text-b">Rasberry Pi</li></ul></div>
+            <div class="grid-items"><ul><li class="text-b">Windows (Primary OS)</li><li class="learning">Linux</li></ul></div>
+            <div class="grid-items"><ul><li class="text-b">Managment Tools</li><li class="learning">Prometheus/Grafana</li><li class="learning">Proxmox</li></ul></div>
+            <div class="grid-items"><ul><li class="text-b">FritzBox</li><li class="text-b">Protocols</li><li class="text-b">Scheme</li></ul></div>
             <div class="grid-items"><ul></ul></div>
         </div>
         <!--
