More CSS and small HTML Changes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <a href="index.html" class="selected">About Me!</a>
             <a href="projects.html" class="text-b">Projects!</a>
             <a href="contact.html" class="text-b">Contact Me!</a>
-            <a href="dashed;shed;tps://github.com/Jolomolokolo" target="_blank" class="text-b">Github</a>
+            <a href="https://github.com/Jolomolokolo" target="_blank" class="text-b">Github</a>
             <a href="index.html"><!--LOGO!--></a>
         </div>
     </nav>
@@ -31,13 +31,13 @@
             <div class="grid-items"><p class="text-b">Server</p></div>
             <div class="grid-items"><p class="text-b">Network</p></div>
             <div class="grid-items"><p class="text-b">Other</p></div>
-            <div class="grid-items"><ul><li class="text-b">HTML</li><li class="text-b">CSS</li><li class="learning">JavaScript</li><li class="learning">Python</li></ul></div>
-            <div class="grid-items"><ul><li class="text-b">Git</li><li class="text-b">Github</li><li class="text-b">Office</li><li class="text-b">Command Line</li><li class="text-b">Davinci Resolve</li></ul></div>
-            <div class="grid-items"><ul><li class="text-b">Arduino</li><li class="text-b">Rasberry Pi</li></ul></div>
-            <div class="grid-items"><ul><li class="text-b">Windows (Primary OS)</li><li class="learning">Linux</li></ul></div>
-            <div class="grid-items"><ul><li class="text-b">Managment Tools</li><li class="learning">Prometheus/Grafana</li><li class="learning">Proxmox</li></ul></div>
-            <div class="grid-items"><ul><li class="text-b">FritzBox</li><li class="text-b">Protocols</li><li class="text-b">Scheme</li></ul></div>
-            <div class="grid-items"><ul></ul></div>
+            <div class="grid-items-down"><ul><li class="text-b">HTML</li><li class="text-b">CSS</li><li class="learning">JavaScript</li><li class="learning">Python</li></ul></div>
+            <div class="grid-items-down"><ul><li class="text-b">Git</li><li class="text-b">Github</li><li class="text-b">Office</li><li class="text-b">Command Line</li><li class="text-b">Davinci Resolve</li></ul></div>
+            <div class="grid-items-down"><ul><li class="text-b">Arduino</li><li class="text-b">Rasberry Pi</li></ul></div>
+            <div class="grid-items-down"><ul><li class="text-b">Windows (Primary OS)</li><li class="learning">Linux</li></ul></div>
+            <div class="grid-items-down"><ul><li class="text-b">Managment Tools</li><li class="learning">Prometheus/Grafana</li><li class="learning">Proxmox</li></ul></div>
+            <div class="grid-items-down"><ul><li class="text-b">FritzBox</li><li class="text-b">Protocols</li><li class="text-b">Scheme</li></ul></div>
+            <div class="grid-items-down"><ul></ul></div>
         </div>
         <!--
             <div class="skills">
