Added Links to Skills Page

--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
             <div class="grid-items"><p class="text-b">Server</p></div>
             <div class="grid-items"><p class="text-b">Network</p></div>
             <div class="grid-items"><p class="text-b">Other</p></div>
-            <div class="grid-items-down"><ul><li class="text-b">HTML</li><li class="text-b">CSS</li><li class="learning">JavaScript</li><li class="learning">Python</li></ul></div>
-            <div class="grid-items-down"><ul><li class="text-b">Git</li><li class="text-b">Github</li><li class="text-b">Office</li><li class="text-b">Command Line</li><li class="text-b">Davinci Resolve</li></ul></div>
-            <div class="grid-items-down"><ul><li class="text-b">Arduino</li><li class="text-b">Rasberry Pi</li></ul></div>
-            <div class="grid-items-down"><ul><li class="text-b">Windows (Primary OS)</li><li class="learning">Linux</li></ul></div>
-            <div class="grid-items-down"><ul><li class="text-b">Managment Tools</li><li class="learning">Prometheus/Grafana</li><li class="learning">Proxmox</li></ul></div>
-            <div class="grid-items-down"><ul><li class="text-b">FritzBox</li><li class="text-b">Protocols</li><li class="text-b">Scheme</li></ul></div>
+            <div class="grid-items-down"><ul><li class="text-b">HTML</li><li class="text-b">CSS</li><li class="learning"><a href="https://www.js.org" target="_blank" class="text-b">JavaScript</a></li><li class="learning"><a href="https://www.python.org" target="_blank" class="text-b">Python</a></li></ul></div>
+            <div class="grid-items-down"><ul><li class="text-b"><a href="https://www.git-scm.com" target="_blank" class="text-b">Git</a></li><li class="text-b"><a href="https://www.github.com" target="_blank" class="text-b">Github</a></li><li class="text-b">Office</li><li class="text-b">Command Line</li><li class="text-b"><a href="https://www.blackmagicdesign.com" target="_blank" class="text-b">Davinci Resolve</a></li></ul></div>
+            <div class="grid-items-down"><ul><li class="text-b"><a href="https://www.arduino.cc" target="_blank" class="text-b">Arduino</a></li><li class="text-b"><a href="https://www.raspberrypi.com/" target="_blank" class="text-b">Rasberry Pi</a></li></ul></div>
+            <div class="grid-items-down"><ul><li class="text-b"><a href="https://www.microsoft.com" target="_blank" class="text-b">Windows</a> (Primary OS)</li><li class="learning">Linux</li></ul></div>
+            <div class="grid-items-down"><ul><li class="text-b">Managment Tools</li><li class="learning">Prometheus/Grafana</li><li class="learning"><a href="https://www.proxmox.com" target="_blank" class="text-b">Proxmox</a></li></ul></div>
+            <div class="grid-items-down"><ul><li class="text-b"><a href="https://www.avm.de" target="_blank" class="text-b">FritzBox</a></li><li class="text-b">Protocols</li><li class="text-b">Scheme</li></ul></div>
             <div class="grid-items-down"><ul></ul></div>
         </div>
         <!--
