--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,15 @@
     </nav>
 </header>
 <body>
-
+    <div class="contact">
+        <h1>Contact Me!</h1>
+        <p>If you want to contact me, you can do so via the following methods:</p>
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+    </div>
 </body>
 <footer>
     <div class="select">
