--- a/impressum.html
+++ b/impressum.html
@@ -18,7 +18,37 @@
     </nav>
 </header>
 <body>
+    <h1 class="centered underline">Imprint</h1>
 
+    <h2>Information pursuant to § 5 TMG</h2>
+    <p><strong>[Your First Name] [Your Last Name]</strong><br>
+    [Your Street and House Number]<br>
+    [Your Postal Code] [Your City]<br>
+    Germany</p>
+
+    <h2>Contact:</h2>
+    <p>Phone: [Your Phone Number]<br>
+    Email: <a href="mailto:[Your Email Address]">[Your Email Address]</a></p>
+
+    <h2>Responsible for content according to § 55 Abs. 2 RStV:</h2>
+    <p><strong>[Your First Name] [Your Last Name]</strong><br>
+    [Your Street and House Number]<br>
+    [Your Postal Code] [Your City]<br>
+    Germany</p>
+
+    <h2>Disclaimer:</h2>
+
+    <h3>Liability for Content</h3>
+    <p>As a service provider, we are responsible for our own content on these pages in accordance with § 7 Abs.1 TMG under general law. According to §§ 8 to 10 TMG, however, we are not obliged to monitor transmitted or stored third-party information or to investigate circumstances that indicate illegal activity.</p>
+    <p>Obligations to remove or block the use of information under general laws remain unaffected. However, liability in this regard is only possible from the time of knowledge of a specific infringement. Upon becoming aware of such legal violations, we will remove this content immediately.</p>
+
+    <h3>Liability for Links</h3>
+    <p>Our offer contains links to external websites of third parties over whose contents we have no control. Therefore, we cannot assume any liability for these external contents. The respective provider or operator of the pages is always responsible for the contents of the linked pages. The linked pages were checked for possible legal violations at the time of linking. Illegal contents were not recognizable at the time of linking.</p>
+    <p>A permanent control of the contents of the linked pages is not reasonable without concrete evidence of a violation of the law. Upon becoming aware of legal violations, we will remove such links immediately.</p>
+    
+    <h3>Copyright</h3>
+    <p>The content and works created by the site operators on these pages are subject to German copyright law. The duplication, processing, distribution, and any kind of exploitation outside the limits of copyright require the written consent of the respective author or creator. Downloads and copies of this site are only permitted for private, non-commercial use.</p>
+    <p>Insofar as the content on this site was not created by the operator, the copyrights of third parties are respected. In particular, third-party content is marked as such. Should you nevertheless become aware of a copyright infringement, please inform us accordingly. Upon becoming aware of legal violations, we will remove such content immediately.</p>
 </body>
 <footer>
     <div class="select">
