Minor Changes to Impressum/footer banner

--- a/contact.html
+++ b/contact.html
@@ -30,8 +30,8 @@
 </body>
 <footer>
     <div class="select">
-        <p>© 2024 Jolomolokolo</p>
-        <a href="impressum.html">Impressum</a>
+        <p class="text-b">© 2024 Jolomolokolo</p>
+        <a href="impressum.html" class="text-b">Impressum</a>
     </div>
 </footer>
 </html>
