--- a/impressum.html
+++ b/impressum.html
@@ -52,8 +52,8 @@
 </body>
 <footer>
     <div class="select">
-        <p>© 2024 Jolomolokolo</p>
-        <a href="impressum.html" class="selected">Impressum</a>
+        <p class="text-b">© 2024 Jolomolokolo</p>
+        <a href="impressum.html" class="selected" class="text-b">Impressum</a>
     </div>
 </footer>
 </html>
