--- a/projects.html
+++ b/projects.html
@@ -18,12 +18,12 @@
     </nav>
 </header>
 <body>
-
+    <h1 class="centered big underline">To be continued...</h1>
 </body>
 <footer>
     <div class="select">
-        <p>© 2024 Jolomolokolo</p>
-        <a href="impressum.html">Impressum</a>
+        <p class="text-b">© 2024 Jolomolokolo</p>
+        <a href="impressum.html" class="text-b">Impressum</a>
     </div>
 </footer>
 </html>
