--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="content">
         <div class="about">
             <h1>About Me!</h1>
-            <p>Hey! I'm Jolomolokolo, a 16 year old student from Germany. I'm currently in the 10th grade and I'm learning how to code in my free time. I'm mainly focusing on web development, but I'm also interested in other programming languages. I'm also a big fan of open source software and I'm trying to contribute to some projects. I'm also a big fan of the command line and I'm trying to learn how to use it more efficiently.</p>
+            <p>Hey! I'm Jolomolokolo, a 16 year old student from Germany. I'm currently in the 11th grade and I'm learning how to code in my free time. I'm mainly focusing on web development, but I'm also interested in other programming languages. I'm also a big fan of open source software and I'm trying to contribute to some projects. I'm also a big fan of the command line and I'm trying to learn how to use it more efficiently.</p>
         </div>
         <div class="skill-grid">
             <div class="grid-items"><p class="text-b">Programming Languages</p></div>
@@ -31,42 +31,20 @@
             <div class="grid-items"><p class="text-b">Server</p></div>
             <div class="grid-items"><p class="text-b">Network</p></div>
             <div class="grid-items"><p class="text-b">Other</p></div>
-            <div class="grid-items-down"><ul><li class="text-b">HTML</li><li class="text-b">CSS</li><li class="learning"><a href="https://www.js.org" target="_blank" class="text-b">JavaScript</a></li><li class="learning"><a href="https://www.python.org" target="_blank" class="text-b">Python</a></li></ul></div>
-            <div class="grid-items-down"><ul><li class="text-b"><a href="https://www.git-scm.com" target="_blank" class="text-b">Git</a></li><li class="text-b"><a href="https://www.github.com" target="_blank" class="text-b">Github</a></li><li class="text-b">Office</li><li class="text-b">Command Line</li><li class="text-b"><a href="https://www.blackmagicdesign.com" target="_blank" class="text-b">Davinci Resolve</a></li></ul></div>
+            <div class="grid-items-down"><ul><li class="text-b"><span title="Hyper Text Markup Language">HTML</span></li><li class="text-b"><span title="Cascading Style Sheets">CSS</span></li><li class="learning"><a href="https://www.js.org" target="_blank" class="text-b">JavaScript</a></li><li class="learning"><a href="https://www.python.org" target="_blank" class="text-b">Python</a></li></ul></div>
+            <div class="grid-items-down"><ul><li class="text-b"><a href="https://www.git-scm.com" target="_blank" class="text-b">Git</a></li><li class="text-b"><a href="https://www.github.com" target="_blank" class="text-b">Github</a></li><li class="text-b">Office</li><li class="text-b"><span title="Command Line Interface">CLI</span></li><li class="text-b"><a href="https://www.blackmagicdesign.com" target="_blank" class="text-b">Davinci Resolve</a></li></ul></div>
             <div class="grid-items-down"><ul><li class="text-b"><a href="https://www.arduino.cc" target="_blank" class="text-b">Arduino</a></li><li class="text-b"><a href="https://www.raspberrypi.com/" target="_blank" class="text-b">Rasberry Pi</a></li></ul></div>
             <div class="grid-items-down"><ul><li class="text-b"><a href="https://www.microsoft.com" target="_blank" class="text-b">Windows</a> (Primary OS)</li><li class="learning">Linux</li></ul></div>
             <div class="grid-items-down"><ul><li class="text-b">Managment Tools</li><li class="learning">Prometheus/Grafana</li><li class="learning"><a href="https://www.proxmox.com" target="_blank" class="text-b">Proxmox</a></li></ul></div>
             <div class="grid-items-down"><ul><li class="text-b"><a href="https://www.avm.de" target="_blank" class="text-b">FritzBox</a></li><li class="text-b">Protocols</li><li class="text-b">Scheme</li></ul></div>
             <div class="grid-items-down"><ul></ul></div>
         </div>
-        <!--
-            <div class="skills">
-                <h1>Skills</h1>
-                    <ul class="skills">
-                        <li>HTML</li>
-                        <li>CSS</li>
-                        <li class="learning">JavaScript (learning)</li>
-                        <li class="learning">Python (learning)</li>
-                        <li>Windows</li>
-                        <li class="learning">Linux (learning)</li>
-                        <li>Git</li>
-                        <li>Github</li>
-                        <li>Command Line</li>
-                        <li>Arduino</li>
-                        <li>Rasberry Pi</li>
-                        <li>Server - Fujitsu</li>
-                        <li class="learning">Proxmox (learning)</li>
-                        <li>Network</li>
-                    </ul>
-            </div>
-        categorys: programming languages; applications; electronics; operating systems; server; network; other
-        -->
     </div>
 </body>
 <footer>
     <div class="select">
-        <p>© 2024 Jolomolokolo</p>
-        <a href="impressum.html">Impressum</a>
+        <p class="text-b">© 2024 Jolomolokolo</p>
+        <a href="impressum.html" class="text-b">Impressum</a>
     </div>
 </footer>
 </html>
