Added CSS for my About Page Text

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 <body>
     <div class="content">
         <div class="about">
-            <h1>About Me!</h1>
-            <p>Hey! I'm Jolomolokolo, a 16 year old student from Germany. I'm currently in the 11th grade and I'm learning how to code in my free time. I'm mainly focusing on web development, but I'm also interested in other programming languages. I'm also a big fan of open source software and I'm trying to contribute to some projects. I'm also a big fan of the command line and I'm trying to learn how to use it more efficiently.</p>
+            <h1 class="text-b about-heading">About Me!</h1>
+            <p class="text-b about-text">Hey! I'm <span class="underline big">Jolomolokolo</span>, a 16 year old student from Germany. I'm currently in the 11th grade and I'm learning how to code in my free time. I'm mainly focusing on <span class="underline big">web development</span>, but I'm also interested in other programming languages. I'm also a big fan of <span class="underline big">open source software</span> and I'm trying to contribute to some projects. I'm also a big fan of the <span class="underline big">command line</span> and I'm trying to learn how to use it more efficiently.</p>
         </div>
         <div class="skill-grid">
             <div class="grid-items"><p class="text-b">Programming Languages</p></div>
