Logo temp deleted and Contact Page started

--- a/contact.html
+++ b/contact.html
@@ -22,9 +22,8 @@
         <h1>Contact Me!</h1>
         <p>If you want to contact me, you can do so via the following methods:</p>
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>Email: <a href="mailto:xyz@gmail.com">xyz@gmail.com</a></li>
+                <li>Github: <a href="http://github.com/Jolomolokolo" target="_blank">Jolomolokolo</a></li>
             </ul>
     </div>
 </body>
