Last fixes before first scrapbook, like Logo comment added to everything

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <a href="projects.html" class="text-b">Projects!</a>
             <a href="contact.html" class="text-b">Contact Me!</a>
             <a href="https://github.com/Jolomolokolo" target="_blank" class="text-b">Github</a>
-            <!--<a href="index.html" class="logo-link"><img src="logo.jpg" alt="Logo" class="logo"></a> -->
+        <!--<a href="index.html" class="logo-link"><img src="logo.jpg" alt="Logo" class="logo"></a> -->
         </div>
     </nav>
 </header>
@@ -36,8 +36,8 @@
             <div class="grid-items-down"><ul><li class="text-b"><a href="https://www.arduino.cc" target="_blank" class="text-b">Arduino</a></li><li class="text-b"><a href="https://www.raspberrypi.com/" target="_blank" class="text-b">Rasberry Pi</a></li></ul></div>
             <div class="grid-items-down"><ul><li class="text-b"><a href="https://www.microsoft.com" target="_blank" class="text-b">Windows</a> (Primary OS)</li><li class="learning">Linux (learning)</li></ul></div>
             <div class="grid-items-down"><ul><li class="text-b">Managment Tools</li><li class="learning">Prometheus/Grafana (learning)</li><li class="learning"><a href="https://www.proxmox.com" target="_blank" class="text-b">Proxmox</a> (learning)</li></ul></div>
-            <div class="grid-items-down"><ul><li class="text-b"><a href="https://www.avm.de" target="_blank" class="text-b">FritzBox</a></li><li class="text-b">Protocols</li><li class="text-b">Scheme</li></ul></div>
-            <div class="grid-items-down"><ul></ul></div>
+            <div class="grid-items-down"><ul><li class="text-b"><a href="https://www.avm.de" target="_blank" class="text-b">FritzBox</a></li><li class="text-b">Protocols</li><li class="text-b">Schemes</li></ul></div>
+            <div class="grid-items-down"><ul><li class="text-b"><span title="Computer Aided Design">CAD</span>: <a href="https://www.autodesk.de" target="_blank" class="text-b">Fusion 360</a></li></ul></div>
         </div>
     </div>
 </body>
