--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,7 @@
             <a href="projects.html" class="selected">Projects!</a>
             <a href="contact.html" class="text-b">Contact Me!</a>
             <a href="https://github.com/Jolomolokolo" target="_blank" class="text-b">Github</a>
-            <a href="index.html"><!--LOGO!--></a>
+        <!--<a href="index.html" class="logo-link"><img src="logo.jpg" alt="Logo" class="logo"></a> -->
         </div>
     </nav>
 </header>
