--- a/contact.html
+++ b/contact.html
@@ -13,17 +13,17 @@
             <a href="projects.html" class="text-b">Projects!</a>
             <a href="contact.html" class="selected">Contact Me!</a>
             <a href="https://github.com/Jolomolokolo" target="_blank" class="text-b">Github</a>
-            <a href="index.html"><!--LOGO!--></a>
+        <!--<a href="index.html" class="logo-link"><img src="logo.jpg" alt="Logo" class="logo"></a> -->
         </div>
     </nav>
 </header>
 <body>
     <div class="contact">
-        <h1>Contact Me!</h1>
-        <p>If you want to contact me, you can do so via the following methods:</p>
+        <h1 class="text-b contact-heading">Contact Me!</h1>
+        <p class="text-b contact-text">If you want to contact me, you can do so via the following methods:</p>
             <ul>
-                <li>Email: <a href="mailto:xyz@gmail.com">xyz@gmail.com</a></li>
-                <li>Github: <a href="http://github.com/Jolomolokolo" target="_blank">Jolomolokolo</a></li>
+                <li class="text-b contact-text">Email: <a href="mailto:xyz@gmail.com" class="text-b contact-text">xyz@gmail.com</a></li>
+                <li class="text-b contact-text">Github: <a href="http://github.com/Jolomolokolo" target="_blank" class="text-b contact-text">Jolomolokolo</a></li>
             </ul>
     </div>
 </body>
