Added Links to my Project Page and Headings for Project Page

--- a/projects.html
+++ b/projects.html
@@ -26,29 +26,32 @@
         <!-- Project 1 -->
         <div class="grid-items-projects">
             <table>
-                <tr><th><h1 class="text-b centered">Portfolio Website</h1></th></tr>
+                <tr><th><h1 class="text-b centered heading-project">Portfolio Website</h1></th></tr>
                 <tr><th><p class="technologies text-b centered underline">Used technologies: HTML, CSS</p></th></tr>
                 <tr><th><p class="description-grid text-b">For my Portfolio Website Project, I utilized HTML and CSS to create a visually appealing and user-friendly platform to showcase my work and skills. The project involved crafting a clean, responsive design that highlights my professional experience, projects, and contact information. Through careful use of HTML for structuring content and CSS for styling, I ensured the website is both functional and aesthetically pleasing across different devices and browsers. This project not only demonstrates my proficiency in front-end development but also my attention to detail and commitment to providing an excellent user experience.</p></th></tr>
+                <tr><th><h2 class="text-b centered">Link to Project: <a href="https://github.com/Jolomolokolo/Portfolio" target="_blank" class="text-b">Github Repo</a></h2></th></tr>
             </table>
         </div>
-        <div class="grid-items-img-projects"><img src="projects/project-1.png" alt="Picture of my Portfolio Website Project"></div>
+        <div class="grid-items-img-projects"><img src="projects/project-1-about.png" alt="Picture of my Portfolio Website Project"></div>
         
         <!-- Project 2 -->
         <div class="grid-items-img-projects"><img src="" alt=""></div>
         <div class="grid-items-projects">
             <table>
-                <tr><th><h1 class="text-b centered">DEEJ</h1></th></tr>
+                <tr><th><h1 class="text-b centered heading-project">DEEJ</h1></th></tr>
                 <tr><th><p class="technologies text-b centered underline">Used technologies: Arduino, DEEJ-Software</p></th></tr>
                 <tr><th><p class="description-grid text-b">For my DEEJ Audiomixer with Arduino build, I embarked on an exciting project that combines hardware and software to create a dynamic audio mixing device. Utilizing an Arduino microcontroller, I designed and programmed the system to handle multiple audio inputs, allowing for seamless mixing and control through physical knobs and sliders. The project involved intricate wiring and careful calibration to ensure high-quality sound output. This hands-on experience not only enhanced my understanding of electronic components and circuitry but also showcased my ability to integrate hardware with software to produce a functional and innovative audio mixing solution.</p></th></tr>
+                <tr><th><h2 class="text-b centered">Link to Project: <a href="https://github.com/Jolomolokolo/deej" target="_blank" class="text-b">Github Repo</a></h2></th></tr>
             </table>
         </div>
         
         <!-- Project 3 -->
         <div class="grid-items-projects">
             <table>
-                <tr><th><h1 class="text-b centered">Project Impsum 1</h1></th></tr>
+                <tr><th><h1 class="text-b centered heading-project">Project Impsum 1</h1></th></tr>
                 <tr><th><p class="technologies text-b centered underline">Used technologies: Lorem, Ipsum</p></th></tr>
                 <tr><th><p class="description-grid text-b">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p></th></tr>
+                <tr><th><h2 class="text-b centered">Link to Project: <a href="https://github.com/Jolomolokolo/" target="_blank" class="text-b">Github Repo</a></h2></th></tr>
             </table>
         </div>
         <div class="grid-items-img-projects"><img src="" alt=""></div>
@@ -57,9 +60,10 @@
         <div class="grid-items-img-projects"><img src="" alt=""></div>
         <div class="grid-items-projects">
             <table>
-                <tr><th><h1 class="text-b centered">Project Impsum 2</h1></th></tr>
+                <tr><th><h1 class="text-b centered heading-project">Project Impsum 2</h1></th></tr>
                 <tr><th><p class="technologies text-b centered underline">Used technologies: Lorem, Ipsum</p></th></tr>
                 <tr><th><p class="description-grid text-b">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p></th></tr>
+                <tr><th><h2 class="text-b centered">Link to Project: <a href="https://github.com/Jolomolokolo/" target="_blank" class="text-b">Github Repo</a></h2></th></tr>
             </table>
         </div>
     </div>
