Added spacers and added a temporary Picture

--- a/contact.html
+++ b/contact.html
@@ -26,6 +26,7 @@
                 <li class="text-b contact-text">Github: <a href="http://github.com/Jolomolokolo" target="_blank" class="text-b contact-text">Jolomolokolo</a></li>
             </ul>
     </div>
+    <div class="spaces"></div>
 </body>
 <footer>
     <div class="select">
