--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             <div class="grid-items-down"><ul><li class="text-b"><span title="Computer Aided Design">CAD</span>: <a href="https://www.autodesk.de" target="_blank" class="text-b">Fusion 360</a></li></ul></div>
         </div>
     </div>
+    <div class="space"></div>
 </body>
 <footer>
     <div class="select">
