--- a/projects.html
+++ b/projects.html
@@ -35,7 +35,7 @@
         <div class="grid-items-img-projects"><img src="projects/project-1-about.png" alt="Picture of my Portfolio Website Project"></div>
         
         <!-- Project 2 -->
-        <div class="grid-items-img-projects"><img src="" alt=""></div>
+        <div class="grid-items-img-projects"><img src="projects/TEMP.png" alt="Temp Picture"></div>
         <div class="grid-items-projects">
             <table>
                 <tr><th><h1 class="text-b centered heading-project">DEEJ</h1></th></tr>
@@ -54,10 +54,10 @@
                 <tr><th><h2 class="text-b centered">Link to Project: <a href="https://github.com/Jolomolokolo/" target="_blank" class="text-b">Github Repo</a></h2></th></tr>
             </table>
         </div>
-        <div class="grid-items-img-projects"><img src="" alt=""></div>
+        <div class="grid-items-img-projects"><img src="projects/TEMP.png" alt="Temp Picture"></div>
 
         <!-- Project 4 -->
-        <div class="grid-items-img-projects"><img src="" alt=""></div>
+        <div class="grid-items-img-projects"><img src="projects/TEMP.png" alt="Temp Picture"></div>
         <div class="grid-items-projects">
             <table>
                 <tr><th><h1 class="text-b centered heading-project">Project Impsum 2</h1></th></tr>
